==> w809291634/RTT-WIFI-PROJECT/rtthread/zonesion/xLab/WiFi/sensor-el/src/sensor/buzzer.c <==
/*********************************************************************************************
* 文件：beep.c
* 作者：Lixm 2017.10.17
* 说明：蜂鸣器驱动代码
* 修改：
* 注释：
*********************************************************************************************/

/*********************************************************************************************
* 头文件
*********************************************************************************************/
#include "buzzer.h"

/*********************************************************************************************
* 名称：beep_init()
* 功能：继电器传感器初始化
* 参数：无
* 返回：无
* 修改：
* 注释：
*********************************************************************************************/
void buzzer_init(void)
{
  GPIO_InitTypeDef  GPIO_InitStructure;
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
  
  GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_7;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
  GPIO_Init(GPIOA, &GPIO_InitStructure);  
  buzzer_off();
}

/*********************************************************************************************
* 名称：beep_control()
* 功能：继电器传感器控制函数
* 参数：无
* 返回：无
* 修改：
* 注释：
*********************************************************************************************/
void buzzer_on(void)
{
  GPIO_ResetBits(GPIOA,  GPIO_Pin_7);
}
void buzzer_off(void)
{
   GPIO_SetBits(GPIOA,  GPIO_Pin_7);
}
